--- a/apps/app-of-apps/apps/edge-k8s-applicationset.yaml
+++ b/apps/app-of-apps/apps/edge-k8s-applicationset.yaml
@@ -19,6 +19,8 @@ spec:
   template:
     metadata:
       name: '{{.name}}'
+      annotations:
+        argocd.argoproj.io/sync-wave: "3"
       labels: 
         cd-component: capx-cluster
         environment: '{{.name}}'
