--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -12,24 +12,24 @@ key:
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
-    - name: littlelab1-13
-      version: v1.27.4
-      controlplane_ip: 10.50.28.43
-      cluster: cluster1
-      prismcentral: littlelab1
-      subnet: vlan.145-cluster1
-    - name: littlelab1-14
-      version: v1.27.4
-      controlplane_ip: 10.50.28.44
-      cluster: cluster1
-      prismcentral: littlelab1
-      subnet: vlan.145-cluster1
-    - name: littlelab1-15
-      version: v1.27.4
-      controlplane_ip: 10.50.28.45
-      cluster: cluster1
-      prismcentral: littlelab1
-      subnet: vlan.145-cluster1
+    # - name: littlelab1-13
+    #   version: v1.27.4
+    #   controlplane_ip: 10.50.28.43
+    #   cluster: cluster1
+    #   prismcentral: littlelab1
+    #   subnet: vlan.145-cluster1
+    # - name: littlelab1-14
+    #   version: v1.27.4
+    #   controlplane_ip: 10.50.28.44
+    #   cluster: cluster1
+    #   prismcentral: littlelab1
+    #   subnet: vlan.145-cluster1
+    # - name: littlelab1-15
+    #   version: v1.27.4
+    #   controlplane_ip: 10.50.28.45
+    #   cluster: cluster1
+    #   prismcentral: littlelab1
+    #   subnet: vlan.145-cluster1
     # - name: littlelab1-16
     #   version: v1.27.4
     #   controlplane_ip: 10.50.28.46
