--- a/apps/app-of-apps/apps/flow-integration.yaml
+++ b/apps/app-of-apps/apps/flow-integration.yaml
@@ -48,6 +48,6 @@ spec:
                 cluster:
                   name: "{{.name}}"
                   prismcentral: "{{.prismcentral}}"
-                  user: <path:secret/data/prismcentral/{{.name}}#user>
-                  pass: <path:secret/data/prismcentral/{{.name}}#pass>
-                  endpoint: <path:secret/data/prismcentral/{{.name}}#endpoint>
+                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
+                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
+                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
