--- a/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
@@ -17,15 +17,15 @@ spec:
         source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.27.4.qcow2"
         name = "ubuntu-2204-kube-v1.27.4"
       }
-      resource "nutanix_image" "source_image2" {
+      # resource "nutanix_image" "source_image2" {
 
-        provider = nutanix
+      #   provider = nutanix
 
-        source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.25.12.qcow2"
-        name = "ubuntu-2204-kube-v1.25.12"
-      }
+      #   source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.25.12.qcow2"
+      #   name = "ubuntu-2204-kube-v1.25.12"
+      # }
   providerConfigRef:
     name: {{ .Values.cluster.name }}-providerconfig
   writeConnectionSecretToRef:
     namespace:  {{ .Values.cluster.name }}
-    name: connection-nutanix-images
+    name: connection-{{ .Values.cluster.name }}-images
