--- a/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
@@ -13,7 +13,7 @@ spec:
           }
         }
         backend "kubernetes" {
-          secret_suffix     = "backend-nutanix-images"
+          secret_suffix     = "backend-{{ .Values.cluster.name }}"
           namespace         = "{{ .Values.cluster.name }}"
           in_cluster_config = true
         }
