--- a/common-helm-charts/crossplane-infrastructure/flow/templates/isolation-rule.yaml
+++ b/common-helm-charts/crossplane-infrastructure/flow/templates/isolation-rule.yaml
@@ -72,4 +72,4 @@ spec:
     name: {{ .Values.cluster.name }}-flow-providerconfig
   writeConnectionSecretToRef:
     namespace:  {{ .Values.cluster.name }}
-    name: connection-nutanix-flow-{{ .Values.cluster.name }}
+    name: connection-{{ .Values.cluster.name }}-flow
