--- a/common-helm-charts/crossplane-infrastructure/flow/templates/provider.yaml
+++ b/common-helm-charts/crossplane-infrastructure/flow/templates/provider.yaml
@@ -11,7 +11,7 @@ spec:
           }
         }
         backend "kubernetes" {
-          secret_suffix     = "backend-nutanix-images"
+          secret_suffix     = "backend-{{ .Values.cluster.name }}-flow"
           namespace         = "{{ .Values.cluster.name }}"
           in_cluster_config = true
         }
