--- a/apps/flow-integration.yaml
+++ b/apps/flow-integration.yaml
@@ -18,7 +18,7 @@ spec:
           elementsYaml: "{{ .key.clusters | toJson }}"
   template:
     metadata:
-      name: '{{.name}}-per-cluster-settings'
+      name: '{{.name}}-flow'
       labels: 
         cd-component: flow
         environment: '{{.name}}'
@@ -46,6 +46,6 @@ spec:
                 cluster:
                   name: "{{.name}}"
                   prismcentral: "{{.prismcentral}}"
-                  user: <path:secret/data/prismcentral/{{.name}}#user>
-                  pass: <path:secret/data/prismcentral/{{.name}}#pass>
-                  endpoint: <path:secret/data/prismcentral/{{.name}}#endpoint>
+                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
+                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
+                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
