--- a/apps/cluster-integration.yaml
+++ b/apps/cluster-integration.yaml
@@ -49,12 +49,17 @@ spec:
                   user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
                   pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
                   endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
-      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
-        path: common-helm-charts/external-secrets
-        targetRevision: main
-        helm:
-          parameters:
-          - name: "cluster.name"
-            value: '{{.name}}'
-          - name: "credentialsecret.key"
-            value: 'secret/data/prismcentral/{{.prismcentral}}'
+      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
+        path: 'common-helm-charts/crossplane-infrastructure/category'
+        targetRevision: 'test1'
+        plugin:
+          name: argocd-vault-plugin-helm
+          env:
+            - name: HELM_VALUES
+              value: |
+                cluster:
+                  name: "{{.name}}"
+                  prismcentral: "{{.prismcentral}}"
+                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
+                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
+                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
