--- a/common-helm-charts/crossplane-infrastructure/provider/templates/provider.yaml
+++ b/common-helm-charts/crossplane-infrastructure/provider/templates/provider.yaml
@@ -1,9 +1,9 @@
 apiVersion: tf.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: {{ .Values.cluster.name }}-flow-providerconfig
+  name: {{ .Values.cluster.name }}-providerconfig
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/sync-wave: "-10"
 spec:
   configuration: |
       terraform {
@@ -13,7 +13,7 @@ spec:
           }
         }
         backend "kubernetes" {
-          secret_suffix     = "backend-{{ .Values.cluster.name }}-flow"
+          secret_suffix     = "backend-{{ .Values.cluster.name }}"
           namespace         = "{{ .Values.cluster.name }}"
           in_cluster_config = true
         }
