--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -1,17 +1,32 @@
 key:
   clusters:
-    - name: littlelab1-11
+    - name: littlelab1-dev
       version: v1.27.4
       controlplane_ip: 10.50.28.41
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
-    - name: littlelab1-12
-      version: v1.27.4
-      controlplane_ip: 10.50.28.42
-      cluster: cluster1
-      prismcentral: littlelab1
-      subnet: vlan.145-cluster1
+    # - name: littlelab1-prod
+    #   version: v1.27.4
+    #   controlplane_ip: 10.50.28.42
+    #   cluster: cluster1
+    #   prismcentral: littlelab1
+    #   subnet: vlan.145-cluster1
+
+
+    
+    # - name: littlelab1-11
+    #   version: v1.27.4
+    #   controlplane_ip: 10.50.28.41
+    #   cluster: cluster1
+    #   prismcentral: littlelab1
+    #   subnet: vlan.145-cluster1
+    # - name: littlelab1-12
+    #   version: v1.27.4
+    #   controlplane_ip: 10.50.28.42
+    #   cluster: cluster1
+    #   prismcentral: littlelab1
+    #   subnet: vlan.145-cluster1
     # - name: littlelab1-13
     #   version: v1.27.4
     #   controlplane_ip: 10.50.28.43
