--- a/workload/demo.yaml
+++ b/workload/demo.yaml
@@ -44,15 +44,19 @@ spec:
     - --cpu
     - "2"
 ---
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: my-svc
-  namespace: demo
+  name: minimal-ingress
 spec:
-  ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 80
-  type: LoadBalancer
+  ingressClassName: cilium
+  rules:
+    - http:
+        paths:
+          - path: /testpath
+            pathType: Prefix
+            backend:
+              service:
+                name: test
+                port:
+                  number: 80
