--- a/workload/demo.yaml
+++ b/workload/demo.yaml
@@ -48,6 +48,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: minimal-ingress
+  namespace: demo
 spec:
   ingressClassName: cilium
   rules:
