--- a/workload/demo.yaml
+++ b/workload/demo.yaml
@@ -44,20 +44,15 @@ spec:
     - --cpu
     - "2"
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
-  name: minimal-ingress
+  name: my-svc
   namespace: demo
 spec:
-  ingressClassName: cilium
-  rules:
-    - http:
-        paths:
-          - path: /testpath
-            pathType: Prefix
-            backend:
-              service:
-                name: test
-                port:
-                  number: 80
+  ports:
+  - name: http
+    port: 80
+    protocol: TCP
+    targetPort: 80
+  type: LoadBalancer
