--- a/workload/demo.yaml
+++ b/workload/demo.yaml
@@ -56,3 +56,21 @@ spec:
     protocol: TCP
     targetPort: 80
   type: LoadBalancer
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: minimal-ingress
+  namespace: demo
+spec:
+  ingressClassName: cilium
+  rules:
+    - http:
+        paths:
+          - path: /testpath
+            pathType: Prefix
+            backend:
+              service:
+                name: test
+                port:
+                  number: 443
