--- a/workload/demo.yaml
+++ b/workload/demo.yaml
@@ -44,33 +44,15 @@ spec:
     - --cpu
     - "2"
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: my-svc
-  namespace: demo
-spec:
-  ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 80
-  type: LoadBalancer
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: minimal-ingress
-  namespace: demo
-spec:
-  ingressClassName: cilium
-  rules:
-    - http:
-        paths:
-          - path: /testpath
-            pathType: Prefix
-            backend:
-              service:
-                name: test
-                port:
-                  number: 443
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: my-svc
+#   namespace: demo
+# spec:
+#   ports:
+#   - name: http
+#     port: 80
+#     protocol: TCP
+#     targetPort: 80
+#   type: LoadBalancer
