--- a/workload/demo.yaml
+++ b/workload/demo.yaml
@@ -44,15 +44,15 @@ spec:
     - --cpu
     - "2"
 ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: my-svc
-#   namespace: demo
-# spec:
-#   ports:
-#   - name: http
-#     port: 80
-#     protocol: TCP
-#     targetPort: 80
-#   type: LoadBalancer
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-svc
+  namespace: demo
+spec:
+  ports:
+  - name: http
+    port: 80
+    protocol: TCP
+    targetPort: 80
+  type: LoadBalancer
