--- a/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
@@ -8,7 +8,7 @@ spec:
   forProvider:
     source: Inline
     module: |
-      resource "nutanix_image" "source_image" {
+      resource "nutanix_image" "source_image_1.28" {
 
         provider = nutanix
 
@@ -22,14 +22,14 @@ spec:
         source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.27.4.qcow2"
         name = "ubuntu-2204-kube-v1.27.4"
       }
-      resource "nutanix_image" "source_image2" {
+      resource "nutanix_image" "source_image_1.26" {
 
         provider = nutanix
 
         source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.26.7.qcow2"
         name = "ubuntu-2204-kube-v1.26.7"
       }
-      resource "nutanix_image" "source_image2" {
+      resource "nutanix_image" "source_image_1.25" {
 
         provider = nutanix
 
